--- a/app/src/main/res/layout/activity_break_down.xml
+++ b/app/src/main/res/layout/activity_break_down.xml
@@ -4,15 +4,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bt"
     tools:context=".BreakDown">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btAccident"
+        android:layout_width="386dp"
         android:layout_height="wrap_content"
-        android:text="reakdown Services"
+        android:layout_marginTop="29dp"
+        android:backgroundTint="#00A1A3AE"
+        android:fontFamily="@font/carter_one"
+        android:text="  Vehicles over 7 Tons"
+        android:textAlignment="textStart"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="296dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btVb3"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/btVb3"
+        android:layout_width="386dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="26dp"
+        android:backgroundTint="#00A1A3AE"
+        android:fontFamily="@font/carter_one"
+        android:text="  Vehicles over 7 Tons"
+        android:textAlignment="textStart"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btVb2" />
+
+    <Button
+        android:id="@+id/btVb1"
+        android:layout_width="386dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="324dp"
+        android:backgroundTint="#00A1A3AE"
+        android:fontFamily="@font/carter_one"
+        android:text="  Vehicles 1 - 3 Tons"
+        android:textAlignment="textStart"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btVb2"
+        android:layout_width="386dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:backgroundTint="#00A1A3AE"
+        android:fontFamily="@font/carter_one"
+        android:text="  Vehicles 3.1 - 7 Tons"
+        android:textAlignment="textStart"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btVb1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
