--- a/app/src/main/res/layout/activity_bus_parking.xml
+++ b/app/src/main/res/layout/activity_bus_parking.xml
@@ -6,59 +6,89 @@
     android:layout_height="match_parent"
     tools:context=".BusParking">
 
-    <TextView
-        android:id="@+id/tvInfo"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btTaxi"
+        android:layout_width="386dp"
         android:layout_height="wrap_content"
-        android:text="Pay Bus Pacrk fee for "
+        android:layout_marginBottom="96dp"
+
+        android:backgroundTint="#00A1A3AE"
+        android:fontFamily="@font/carter_one"
+        android:text="  Taxi Registration"
+        android:textAlignment="textStart"
         android:textSize="18sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btBus"
+        app:layout_constraintVertical_bias="1.0" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvMatatu"
-        android:layout_width="360dp"
-        android:layout_height="50dp"
-        android:text="Pay Bus Pacrk fee for "
+    <Button
+        android:id="@+id/btBus"
+        android:layout_width="386dp"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="28dp"
+        android:backgroundTint="#00A1A3AE"
+        android:fontFamily="@font/carter_one"
+        android:text="  Buses (400 seats)"
         android:textAlignment="textStart"
-        app:layout_constraintBottom_toTopOf="@+id/tvInfo"
+        android:textSize="18sp"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toBottomOf="@+id/btMiniBus" />
 
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="106dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:text="Button" />
+    <Button
+        android:id="@+id/btMiniBus"
+        android:layout_width="386dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="252dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/autour_one"
-            android:gravity="start|center_horizontal"
-            android:text="Matatus and Nissans"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+        android:backgroundTint="#00A1A3AE"
+        android:fontFamily="@font/carter_one"
+        android:text="Mini-Buses (25 seats)"
+        android:textAlignment="textStart"
+        android:textSize="18sp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btMatt" />
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="244dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:fontFamily="@font/emblema_one"
-            android:gravity="center"
-            android:text="Ksh 100" />
-    </androidx.cardview.widget.CardView>
+    <Button
+        android:id="@+id/btMatt"
+        android:layout_width="386dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="368dp"
 
-
-
-
-
+        android:backgroundTint="#00A1A3AE"
+        android:fontFamily="@font/carter_one"
+        android:text="Matatu and Nissans"
+        android:textAlignment="textStart"
+        android:textSize="18sp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--    <Button-->
+<!--    android:backgroundTint="#00A1A3AE"-->
+<!--    android:fontFamily="@font/carter_one"-->
+<!--    android:id="@+id/btClamping"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_marginTop="12dp"-->
+<!--    android:layout_width="386dp"-->
+<!--    android:text="  Clamping"-->
+<!--    android:textAlignment="viewStart"-->
+<!--    android:textSize="18sp"-->
+<!--    android:typeface="normal"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintHorizontal_bias="0.5"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintTop_toBottomOf="@+id/btBreakDown" />-->
