--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -67,30 +67,18 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         tools:visibility="visible" />
 
-    <AutoCompleteTextView
-        android:id="@+id/autTvUsername"
-        android:layout_width="32dp"
-        android:layout_height="38dp"
-        android:completionHint="Username"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />
-
     <TextView
         android:id="@+id/tvMotto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/autour_one"
         android:text="Unity Is Strength"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/autTvUsername" />
+        app:layout_constraintTop_toBottomOf="@+id/tvIn" />
 
     <Button
         android:id="@+id/btBusPark"
@@ -161,4 +149,15 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvIn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
