--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/bt"
     tools:context=".Register">
 
     <EditText
@@ -15,6 +15,10 @@
         android:ems="10"
         android:hint="Enter The first Name"
         android:inputType="textPersonName"
+        android:shadowColor="#DDD3D3"
+        android:textColor="#070707"
+        android:textColorHighlight="#0C0C0C"
+        android:textColorHint="?android:attr/textColorHint"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,6 +34,8 @@
         android:ems="10"
         android:hint="Enter The Second Name"
         android:inputType="textPersonName"
+        android:textColor="#070707"
+        android:textColorHint="?android:attr/textColorHint"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,6 +51,7 @@
         android:ems="10"
         android:hint="Enter Your Username"
         android:inputType="textPersonName"
+        android:textColor="#070707"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,6 +67,7 @@
         android:ems="10"
         android:hint="Type in Your Password"
         android:inputType="textPassword"
+        android:textColor="#070707"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,6 +83,7 @@
         android:ems="10"
         android:hint="Confirm Your Password"
         android:inputType="textPassword"
+        android:textColor="#070707"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,10 +93,10 @@
 
     <Button
         android:id="@+id/btRegister"
-        android:layout_width="75dp"
-        android:layout_height="28dp"
+        android:layout_width="109dp"
+        android:layout_height="26dp"
         android:layout_marginTop="32dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/nn"
         android:text="Register"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,6 +126,7 @@
         android:ems="10"
         android:hint="Enter your email"
         android:inputType="textEmailAddress"
+        android:textColor="#070707"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -130,6 +140,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="USER REGISTRATION"
+        android:textColor="#070707"
         android:textSize="24sp"
         android:textStyle="bold"
         app:fontFamily="@font/arbutus"
