--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,10 @@
 
     <Button
         android:id="@+id/btnLogIn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="97dp"
+        android:layout_height="60dp"
         android:layout_marginTop="52dp"
-        android:background="#C1C1DB"
+        android:background="@drawable/nn"
         android:fontFamily="@font/arbutus"
         android:text="LogIn"
         android:textColor="#010710"
@@ -56,10 +56,10 @@
 
     <EditText
         android:id="@+id/etEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="277dp"
+        android:layout_height="45dp"
         android:layout_marginTop="116dp"
-        android:background="#D2D2F6"
+        android:background="@drawable/sdds"
         android:ems="10"
         android:hint="Enter your Email"
         android:inputType="textEmailAddress"
@@ -73,10 +73,10 @@
 
     <EditText
         android:id="@+id/etPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="277dp"
+        android:layout_height="45dp"
         android:layout_marginTop="40dp"
-        android:background="#BEC1DD"
+        android:background="@drawable/sdds"
         android:ems="10"
         android:hint="Enter password"
         android:inputType="textPassword"
