--- a/app/src/main/res/layout/activity_clamp.xml
+++ b/app/src/main/res/layout/activity_clamp.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ss"
-    tools:context=".ClampActivity">
+    tools:context=".Clamping.ClampActivity">
 
     <Button
         android:id="@+id/btTrailers"
@@ -14,7 +14,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="  Trailers and Semi-Trailers"
+        android:text="@string/trailers_and_semi_trailers"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +29,7 @@
         android:layout_marginTop="64dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="  Vehicles up to 3 Tons"
+        android:text="@string/vehicles_up_to_3_tons"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="  Vehicles 3.1 - 7 Tons"
+        android:text="@string/vehicles_3_1_7_tons"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +74,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="  Clamp Around Bus Area"
+        android:text="@string/clamp_around_bus_area"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +89,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="  Impound Storage"
+        android:text="@string/impound_storage"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +104,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="  Impounding"
+        android:text="@string/impounding"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,7 +118,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="  Other Nuisance"
+        android:text="@string/other_nuisance"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -135,7 +135,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="  Obstruction"
+        android:text="@string/obstruction"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
