--- a/app/src/main/res/layout/activity_bus_pay.xml
+++ b/app/src/main/res/layout/activity_bus_pay.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bt"
-    tools:context=".MatatuPay">
+    tools:context=".BusPrk.MatatuPay">
 
     <androidx.cardview.widget.CardView
         android:layout_width="401dp"
