--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
             android:layout_marginTop="48dp"
             android:background="#00000000"
             android:layout_gravity="center"
-            android:text="User LogIn"
+            android:text="@string/user_login"
             android:textColor="#F6F6F6"
             android:textSize="36sp"
             android:textStyle="bold"
@@ -74,7 +74,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvAbout" />
+            app:layout_constraintTop_toBottomOf="@+id/tvAbout"
+            android:importantForAutofill="no" />
 
         <EditText
             android:id="@+id/etPassword"
@@ -83,7 +84,7 @@
             android:layout_marginTop="40dp"
             android:background="@drawable/sdds"
             android:ems="10"
-            android:hint="Enter password"
+            android:hint="@string/enter_password"
             android:inputType="textPassword"
             android:textColor="#010710"
             android:layout_gravity="center"
@@ -92,7 +93,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etEmail" />
+            app:layout_constraintTop_toBottomOf="@+id/etEmail"
+            android:importantForAutofill="no" />
 
         <Button
             android:id="@+id/btnLogIn"
@@ -114,13 +116,14 @@
         <TextView
             android:id="@+id/tvRegister"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="28dp"
             android:layout_gravity="center"
+            android:layout_marginTop="10sp"
             android:background="#00000000"
             android:clickable="true"
-            android:text="Register here"
+            android:text="@string/register_here"
             android:textColor="#010710"
-            android:textSize="24sp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
