--- a/app/src/main/res/layout/activity_trailers_pay.xml
+++ b/app/src/main/res/layout/activity_trailers_pay.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TrailersPay">
+    tools:context=".Clamping.TrailersPay">
 
     <androidx.cardview.widget.CardView
         android:layout_width="401dp"
