--- a/app/src/main/res/layout/activity_break_down.xml
+++ b/app/src/main/res/layout/activity_break_down.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="29dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="@string/vehicles_over_7_tons"
+        android:text="vehicles_over_7_tons"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +31,7 @@
         android:layout_marginTop="26dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="@string/vehicles_over_7_tons"
+        android:text="vehicles_over_7_tons"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
         android:layout_marginTop="324dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="@string/vehicles_1_3_tons"
+        android:text="vehicles_1_3_tons"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
         android:layout_marginTop="36dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="@string/vehicles_3_1_7_tons"
+        android:text="vehicles_3_1_7_tons"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
