--- a/app/src/main/res/layout/activity_daily_parking.xml
+++ b/app/src/main/res/layout/activity_daily_parking.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="272dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="@string/vehicles_up_to_2_tons"
+        android:text="vehicles_up_to_2_tons"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="@string/trailers_and_semi_trailers"
+        android:text="trailers_and_semi_trailers"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         android:layout_marginTop="32dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="@string/vehicles_2_1_3_tons"
+        android:text="vehicles_2_1_3_tons"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
         android:layout_marginTop="40dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="@string/vehicles_3_1_7_tons"
+        android:text="vehicles_3_1_7_tons"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +75,7 @@
         android:layout_marginTop="40dp"
         android:backgroundTint="#00A1A3AE"
         android:fontFamily="@font/carter_one"
-        android:text="@string/vehicles_over_7_tons"
+        android:text="vehicles_over_7_tons"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
