--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,8 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+
+
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
@@ -39,6 +41,10 @@
         android:orientation="vertical"
         android:layout_gravity="right|center_horizontal"
         android:id="@+id/login_form">
+        android:state_pressed="true" android:drawable="@drawable/pressed" <!--pressed -->
+        android:drawable="@drawable/normal" <!-- Normal -->
+
+
 
 
         <TextView
@@ -95,6 +101,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etEmail"
             android:importantForAutofill="no" />
+
+
 
         <Button
             android:id="@+id/btnLogIn"
