--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gg"
+    android:background="@drawable/nn"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -55,7 +55,7 @@
             android:background="#00000000"
             android:layout_gravity="center"
             android:text="@string/user_login"
-            android:textColor="#F6F6F6"
+            android:textColor="#363863"
             android:textSize="36sp"
             android:textStyle="bold"
             app:fontFamily="@font/emblema_one"
@@ -70,7 +70,7 @@
             android:layout_height="45dp"
             android:layout_gravity="center"
             android:layout_marginTop="116dp"
-            android:background="@drawable/sdds"
+            android:background="@drawable/my_boarder"
             android:ems="10"
             android:hint="Enter your Email"
             android:inputType="textEmailAddress"
@@ -88,7 +88,7 @@
             android:layout_width="277dp"
             android:layout_height="45dp"
             android:layout_marginTop="40dp"
-            android:background="@drawable/sdds"
+            android:background="@drawable/my_boarder"
             android:ems="10"
             android:hint="@string/enter_password"
             android:inputType="textPassword"
@@ -130,6 +130,7 @@
             android:background="#00000000"
             android:clickable="true"
             android:text="@string/register_here"
+            android:textStyle="italic"
             android:textColor="#010710"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
