--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
             android:background="#00000000"
             android:layout_gravity="center"
             android:text="@string/user_login"
-            android:textColor="#363863"
+            android:textColor="#272A6E"
             android:textSize="36sp"
             android:textStyle="bold"
             app:fontFamily="@font/emblema_one"
